<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <artifactId>SvAnna</artifactId>
    <packaging>pom</packaging>
    <modules>
        <module>svanna-core</module>
        <module>svanna-model</module>
        <module>svanna-test</module>
        <module>svanna-io</module>
        <module>svanna-ingest</module>
        <module>svanna-db</module>
        <module>svanna-spring-boot-autoconfigure</module>
        <module>svanna-spring-boot-starter</module>
        <module>svanna-cli</module>
        <module>svanna-benchmark</module>
    </modules>
    <groupId>org.jax.svanna</groupId>
    <version>1.0.0-RC4-SNAPSHOT</version>
    <name>SvAnna</name>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.1</version>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <phenol.version>1.6.3</phenol.version>
        <phenopacket.version>1.0.0</phenopacket.version>
        <protobuf.version>3.8.0</protobuf.version>
        <jannovar.version>0.35</jannovar.version>
        <silent.genes.version>0.0.1-SNAPSHOT</silent.genes.version>
        <htsjdk.version>2.23.0</htsjdk.version>
        <spring-boot-starter.version>2.5.1</spring-boot-starter.version>
        <svart.version>2.0.0-SNAPSHOT</svart.version>
        <commons-io.version>2.8.0</commons-io.version>
        <commons-csv.version>1.7</commons-csv.version>
        <commons-compress.version>1.21</commons-compress.version>
    </properties>

    <developers>
        <developer>
            <name>Daniel Danis</name>
            <email>daniel.danis@jax.org</email>
            <organization>The Jackson Laboratory for Genomic Medicine</organization>
            <organizationUrl>https://www.jax.org</organizationUrl>
        </developer>
        <developer>
            <name>Peter N Robinson</name>
            <email>peter.robinson@jax.org</email>
            <organization>The Jackson Laboratory for Genomic Medicine</organization>
            <organizationUrl>https://www.jax.org</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:TheJacksonLaboratory/SvAnna.git</connection>
        <developerConnection>scm:git:git@github.com:TheJacksonLaboratory/SvAnna.git</developerConnection>
        <url>scm:git:git@github.com:TheJacksonLaboratory/SvAnna.git</url>
        <tag>v${project.version}</tag>
    </scm>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>4.5.2</version>
            </dependency>
            <dependency>
                <groupId>org.monarchinitiative.svart</groupId>
                <artifactId>svart</artifactId>
                <version>${svart.version}</version>
            </dependency>
            <dependency>
                <groupId>de.charite.compbio</groupId>
                <artifactId>jannovar-core</artifactId>
                <version>${jannovar.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-io</groupId>
                        <artifactId>commons-io</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.apache.commons</groupId>
                        <artifactId>commons-compress</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.testing</groupId>
                        <artifactId>testing</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.apache.logging.log4j</groupId>
                        <artifactId>log4j-slf4j-impl</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.monarchinitiative.phenol</groupId>
                <artifactId>phenol-core</artifactId>
                <version>${phenol.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.guava</groupId>
                        <artifactId>guava</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.monarchinitiative.phenol</groupId>
                <artifactId>phenol-io</artifactId>
                <version>${phenol.version}</version>
            </dependency>
            <dependency>
                <groupId>org.monarchinitiative.phenol</groupId>
                <artifactId>phenol-annotations</artifactId>
                <version>${phenol.version}</version>
            </dependency>
            <dependency>
                <groupId>xyz.ielis.silent.genes</groupId>
                <artifactId>silent-genes-model</artifactId>
                <version>${silent.genes.version}</version>
            </dependency>
            <dependency>
                <groupId>xyz.ielis.silent.genes</groupId>
                <artifactId>silent-genes-gencode</artifactId>
                <version>${silent.genes.version}</version>
            </dependency>
            <dependency>
                <groupId>xyz.ielis.silent.genes</groupId>
                <artifactId>silent-genes-io</artifactId>
                <version>${silent.genes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.samtools</groupId>
                <artifactId>htsjdk</artifactId>
                <version>${htsjdk.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.tukaani</groupId>
                        <artifactId>xz</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.phenopackets</groupId>
                <artifactId>phenopacket-schema</artifactId>
                <version>${phenopacket.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.guava</groupId>
                        <artifactId>guava</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java-util</artifactId>
                <version>${protobuf.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.guava</groupId>
                        <artifactId>guava</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>${commons-csv.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>${commons-compress.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>


</project>
